# miniaudio-node

./: .gitignore  .napirc.json  .npmignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.d.ts  index.js  justfile  napi.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: README.md  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml  reusable-templates.yml
config/: bunfig.toml  eslint.config.js  prettier.config.js  tsconfig.json
docs/: CHANGELOG.md  PROJECT_STRUCTURE.md  PUBLISH.md
examples/: audio-monitor.ts  audio-passthrough-stream.ts  audio-passthrough.ts  buffer-loading.js  buffer-loading.ts  device-management.ts  index.ts  playback-controls.ts  playlist.ts  record-test.ts  ring-buffer-test.ts  simple-playback.ts  test_playback.js  usage.js
examples/typescript/: advanced.ts  buffer-loading.ts
examples/utils/: audio.ts  const.ts  logger.ts  scanner.ts  storage.ts
native/: Cargo.toml
native/src/: lib.rs
scripts/: build-fix.js  build.ts  clean.ts  copy-artifacts.js  dev.ts  install.js  simple-build.js
src/: audio_passthrough.rs  buffer.rs  conversions.rs  decoder.rs  index.ts  input.rs  lib.rs  math.rs  mixer.rs  player.rs  queue.rs  source.rs  stream.rs  types.rs  utils.rs
src/noise/: mod.rs  pink.rs  white.rs
tests/debug/: audio-debugger.ts
tests/integration/: playback.test.ts
tests/unit/: audio-player.test.ts  buffer-loading-extended.test.ts  ogg-support.test.ts
tests/utils/: test-helpers.ts
