[package]
name = "miniaudio_node"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "miniaudio_node"

[package.metadata.napi]
ts-gen = true
js-suffix = ".js"
dts-gen = true
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]


[dependencies]
napi = { version = "3.8.2", features = ["napi4", "serde-json", "async"] }
napi-derive = "3.5.1"
rodio = { version = "0.21.1", features = ["wav", "mp3", "flac", "vorbis"] }
cpal = "0.17.1"
base64 = "0.21"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
